added script to modify the control file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,14 @@ perl:
 
 cache:
   apt: true
-  directories:
-    - $HOME/miniconda
-
-before_install:
-  - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b -p $HOME/miniconda -f
-  - export PATH=$HOME/miniconda/bin:$PATH
-  - conda update --yes conda
-  - conda info -a
-  - conda install --yes -c bioconda perl-app-cpanminus=1.7039
-  - cpanm Parallel::ForkManager
-
 
 install:
   - ./INSTALL.sh
 
 script:
+  - PWD=$(pwd)
+  - REPWD=$(sed 's/\//\\\//g' <<< $PWD | sed 's/\-/\\\-/g')
+  - sed -i 's/test/$REPWD/g' test/phame.ctl
+  - sed -i 's/test/$REPWD/g' test/phame.ctl
   - perl src/runPhaME.pl test/phame.ctl
+
