checking multiple scenarios

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,7 @@ script:
   - REPWD=$(sed 's/\//\\\//g' <<< $PWD | sed 's/\-/\\\-/g')
   - sed -i "s/test/$REPWD\/test/g" test/phame.ctl
   - perl src/runPhaME.pl test/phame.ctl
+  - rm -rf test/results
+  - sed -i 's/buildSNPdb = 0/buildSNPdb = 1/g'test/phame.ctl
+  - perl src/runPhaME.pl test/phame.ctl
 
