added matrix for gcc 4.9 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,24 @@ language: perl
 perl:
   - "5.16"
 
+matrix:
+  include:
+    # works on Precise and Trusty
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env:
+         - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+
 cache:
   apt: true
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 install:
   - ./INSTALL.sh
