--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: require
+os: linux
 language: perl
 perl:
   - "5.16"
@@ -9,8 +10,8 @@ addons:
     sources:
       -ubuntu-toolchain-r-test
     packages:
-      - gcc-6
-      - g++-6
+      - gcc-5
+      - g++-5
       - cmake
 
 # matrix:
