--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,21 @@
-sudo: require
-os: linux
+sudo: required
 language: perl
 perl:
   - "5.16"
-compiler:
-  - gcc
-addons:
-  apt:
-    sources:
-      -ubuntu-toolchain-r-test
-    packages:
-      - gcc-5
-      - g++-5
-      - cmake
 
-# matrix:
-#   include:
-#     # works on Precise and Trusty
-#     - os: linux
-#       addons:
-#         apt:
-#           sources:
-#             - ubuntu-toolchain-r-test
-#           packages:
-#             - g++-4.9
-#       env:
-#          - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
+matrix:
+  include:
+    # works on Precise and Trusty
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-5
+            - g++-5
+      env:
+         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 
 #cache:
 #  apt: true
