now only R1.fastq is parsed

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,13 @@ before_install:
 install:
   - ./INSTALL.sh
 
+before_script:
+  - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Codecov
+
 script:
   - PWD=$(pwd)
   - sh test/TestAll.sh
+  - cover -test
+
+  after_success:
+     - cover -report codecov
