--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,15 @@ matrix:
 
 before_install:
     - eval "${MATRIX_EVAL}"
+    - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
+  
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.9
+      - g++-4.9
 
 install:
   - ./INSTALL.sh
