made sure apt was there

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,17 @@ matrix:
 
 before_install:
     - eval "${MATRIX_EVAL}"
+    - apt-get update -qq
     - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
   
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+    - ubuntu-toolchain-r-test
     packages:
-      - gcc-4.9
-      - g++-4.9
+    - gcc-4.9
+    - g++-4.9
+    - cmake
 
 install:
   - ./INSTALL.sh
