removng matrix option

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,24 @@ language: perl
 perl:
   - "5.16"
 
-matrix:
-    include:
-      - os: linux
-        addons:
-          apt:
-            sources:
-              - ubuntu-toolchain-r-test
-                packages:
-                    - gcc-5
-                    - g++-5
-        env:
-            - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+# matrix:
+#     include:
+#       - os: linux
+#         addons:
+#           apt:
+#             sources:
+#               - ubuntu-toolchain-r-test
+#                 packages:
+#                     - gcc-5
+#                     - g++-5
+#         env:
+#             - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 
 #cache:
 #  apt: true
 
 before_install:
-  - eval "${MATRIX_EVAL}"
+  # - eval "${MATRIX_EVAL}"
   - which gcc
   - gcc -v
   - which g++
