adding gcc as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ before_install:
   - which gcc
   - gcc -v
   - which g++
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get -y install -qq g++-5
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 90
+  - sudo apt-get -y install -qq gcc-5 g++-5
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5
   - which gcc
   - gcc -v
   - which g++
