making sure .travis is activateing phame env

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_install:
 
 install:
   - ./INSTALL.sh
+  - source activate phame
+  - export PATH="$HOME/build/mshakya/PhaME-1/thirdParty/miniconda/bin:$PATH"
 
 before_script:
   - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Codecov
