commenting out all non needed categories

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,11 @@ before_install:
   # - sudo apt-get -y install -qq gcc-5 g++-5
   # - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 60 --slave /usr/bin/g++ g++ /usr/bin/g++-5
 
-install:
+# install:
   # - ./INSTALL.sh
   # - export PATH="$HOME/build/mshakya/PhaME-1/thirdParty/miniconda/bin:$PATH"
 
-before_script:
+# before_script:
   # - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Codecov
 
 script:
