--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 
 install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-    chmod +x miniconda.sh
+  - chmod +x miniconda.sh
   - ./miniconda.sh -b -f
   - conda update --yes -n base conda
   - conda install --yes -c bioconda mummer>=3.23
