--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
-services:
-  - docker
+# services:
+#   - docker
 
 language: perl
 perl:
@@ -24,7 +24,7 @@ install:
   - conda install --yes -c bioconda samtools>=1.7
   - conda install --yes -c bioconda bbmap>=37.62
   - conda install --yes -c bioconda bowtie2=2.3.0
-  - conda install --yes -c bioconda perl-app-cpanminus=$1.7039
+  - conda install --yes -c bioconda perl-app-cpanminus=1.7039
   - cpanm Getopt::Long@2.45
   - cpanm Test::Exception@0.43
   - cpanm Statistics::Distributions@1.02
