--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - conda install --yes -c bioconda bbmap>=37.62
   - conda install --yes -c bioconda bowtie2=2.3.0
   - conda install --yes -c bioconda perl-app-cpanminus=1.7039
+  - conda install --yes -c bioconda bcftools
   - cpanm Getopt::Long@2.45
   - cpanm Test::Exception@0.43
   - cpanm Statistics::Distributions@1.02
