--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,13 @@ install:
   - ./miniconda.sh -b -f
   - export PATH="/home/travis/miniconda3/bin:$PATH"
   - conda update --yes -n base conda
-  - conda install --yes -c bioconda phame
+  - conda install --yes -c bioconda mummer>=3.23
+  - conda install --yes -c bioconda samtools>=1.7
+  - conda install --yes -c bioconda bbmap>=37.62
+  - conda install --yes -c bioconda bowtie2=2.3.0
+  - conda install --yes -c bioconda perl-app-cpanminus=1.7039
+  - conda install --yes -c bioconda bcftools
+  - conda install --yes -c bioconda bwa
   - cpanm Getopt::Long@2.45
   - cpanm Test::Exception@0.43
   - cpanm Statistics::Distributions@1.02
