--- a/.travis.yml
+++ b/.travis.yml
@@ -20,31 +20,31 @@ install:
   - ./miniconda.sh -b -f
   - export PATH="/home/travis/miniconda3/bin:$PATH"
   - conda update --yes -n base conda
-  - conda install --yes -c bioconda mummer>=3.23
-  - conda install --yes -c bioconda samtools>=1.7
-  - conda install --yes -c bioconda bbmap>=37.62
-  - conda install --yes -c bioconda bowtie2=2.3.0
-  - conda install --yes -c bioconda perl-app-cpanminus=1.7039
-  - conda install --yes -c bioconda bcftools
-  - conda install --yes -c bioconda bwa
-  - conda install --yes -c bioconda fasttree
-  - conda install --yes -c bioconda bbmap
-  - conda install --yes -c bioconda raxml
-  - cpanm Getopt::Long@2.45
-  - cpanm Test::Exception@0.43
-  - cpanm Statistics::Distributions@1.02
-  - cpanm File::Path@2.09
-  - cpanm File::Basename@2.85
-  - cpanm File::Copy@2.21
-  - cpanm Parallel::ForkManager@1.17
+  - conda install --yes -c bioconda phame
+  # - conda install --yes -c bioconda samtools>=1.7
+  # - conda install --yes -c bioconda bbmap>=37.62
+  # - conda install --yes -c bioconda bowtie2=2.3.0
+  # - conda install --yes -c bioconda perl-app-cpanminus=1.7039
+  # - conda install --yes -c bioconda bcftools
+  # - conda install --yes -c bioconda bwa
+  # - conda install --yes -c bioconda fasttree
+  # - conda install --yes -c bioconda bbmap
+  # - conda install --yes -c bioconda raxml
+  # - cpanm Getopt::Long@2.45
+  # - cpanm Test::Exception@0.43
+  # - cpanm Statistics::Distributions@1.02
+  # - cpanm File::Path@2.09
+  # - cpanm File::Basename@2.85
+  # - cpanm File::Copy@2.21
+  # - cpanm Parallel::ForkManager@1.17
   - export PATH="$HOME/build/mshakya/PhaME-1/src:$HOME/build/mshakya/PhaME-1/thirdParty/miniconda/bin:$PATH"
 
 # before_script:
   # - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Codecov
 
 script:
-  - test/TestAll.sh 1
   - test/TestAll.sh 2
+  - test/TestAll.sh 3
   # - cover -test
   # - docker run --rm migun/phame-1 sh test/TestAll.sh 
 
