--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - conda config --add channels defaults
   - conda config --add channels conda-forge
   - conda config --add channels bioconda
-  - conda create -n phame_env
+  - conda create --yes -n phame_env
   - conda install --yes -c bioconda phame -n phame_env
   # - conda install --yes -c bioconda samtools>=1.7
   # - conda install --yes -c bioconda bbmap>=37.62
